--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #282c34;
+  background-color: #fefee2;
   color: white;
   font-family: "Roboto", sans-serif;
   font-size: 1.2rem;
