--- a/front/src/components/authentification/login/login.scss
+++ b/front/src/components/authentification/login/login.scss
@@ -3,7 +3,6 @@
 }
 
 .container_login {
-  width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   padding: 2rem;
@@ -17,6 +16,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    .error_form {
+      color: red;
+      font-size: 0.7rem;
+      margin: 0;
+      margin-bottom: 15px;
+    }
     input {
       width: 100%;
       padding: 0.5rem;
@@ -38,6 +43,14 @@
       &:hover {
         background-color: #ccc;
         color: #282c34;
+      }
+    }
+    a {
+      text-decoration: none;
+      color: #282c34;
+      font-size: 0.8rem;
+      &:hover {
+        color: #ccc;
       }
     }
   }
