ajout list repertoire

--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -1,8 +1,11 @@
+#root {
+  width: 90%;
+}
 body {
   background-color: #fefee2;
   color: white;
   font-family: "Roboto", sans-serif;
-  font-size: 1.2rem;
+  font-weight: 300;
   margin: 0;
   padding: 0;
   text-align: center;
