--- a/front/src/components/authentification/login/login.scss
+++ b/front/src/components/authentification/login/login.scss
@@ -1,8 +1,12 @@
 .main {
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .container_login {
+  width: 35%;
+  background-color: #282c34;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   padding: 2rem;
